<resources>
    <string name="app_name">MyApplication</string>
    <string name="titleStr">Here is the title</string>
    <string name="subTitleStr">This is the sub title</string>

    <string name="google_maps_key" templateMergeStrategy="preserve">
        AIzaSyA-wqktBtLyF5RWV6PT4MzNpm7CXlz8C4g
    </string>


    <string name="search_general_keyword">Try to input a more general keyword</string>
    <string name="search_no_result">No result</string>
    <string name="permission_request">Permission Request</string>
    <string name="permission_request_message_part_one">Hi there，You need this permission：</string>
    <string name="permission_request_message_part_two">Please allow, otherwise normal function will be affected。</string>
    <string name="okay">Okay</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="copy_to_clipboard">Text copied to clipboard</string>
    <string name="link_missing">Link is not provided</string>
    <string name="phone_num_missing">Phone number is not provided</string>
    <string name="share_img">share image via</string>
    <string name="bicycle">BICYCLE</string>
    <string name="bus">BUS</string>
    <string name="ferry">FERRY</string>
    <string name="rail">RAIL</string>
    <string name="subway">SUBWAY</string>
    <string name="tram">TRAM</string>
    <string name="by_foot">WALK</string>
    <string name="loading">Loading...</string>
    <string name="check_network">Can not get any result, please check your network</string>
    <string name="map">Map</string>
    <string name="no_short_desc">No Short Description</string>
    <string name="free">Free</string>
    <string name="permission_missing_message">Location permission acquisition failed, normal function is affected！</string>
    <string name="radius_settings">Radius Settings</string>
    <string name="reset_done">Reset successfully</string>
    <string name="title_empty">Title cannot empty</string>
    <string name="desc_empy">Description cannot empty</string>
    <string name="time_empy">Please set event start Time and end Time</string>
    <string name="date_empty">Please set event date</string>
    <string name="location_empy">Please select event location</string>
    <string name="create_event_okay">Created event successfully</string>
    <string name="create_event_failed">Created event failed, Please retry</string>
    <string name="no_sdcard">No sdcard on the device！</string>
    <string name="get_my_location_failed">Get current location failed, Please type your location manually</string>
    <string name="my_location_failed">My Location ❌</string>
    <string name="my_location_okay">My Location √</string>
    <string name="google_service_error">Google Play Services is not available:</string>
    <string name="home">Home</string>
    <string name="ongoing_event">Ongoing Event</string>
    <string name="add_event">Add Event</string>
    <string name="preference">Preference</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="search">Search</string>
    <string name="desc">Description</string>
    <string name="select_your_nearest_area">Select your nearest Area ?</string>
    <string name="click_here_to_clear_your_selection">Click here to clear your selection</string>
    <string name="hi_there">Hi, there</string>
    <string name="hi_subtitle">Choose event by different area</string>
    <string name="from">From</string>
    <string name="event_date">Event Date</string>
    <string name="save">Save</string>
    <string name="to">To</string>
    <string name="family">Family</string>
    <string name="more">MORE</string>
    <string name="children">Children</string>
    <string name="title">Title</string>
    <string name="continue_step">Continue</string>
    <string name="start_end_time">Start, End Time</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="confirmation">Confirmation</string>
    <string name="event_title_hint">Event title</string>
    <string name="event_description_hint">Event description</string>
    <string name="depart_at">Depart At:</string>
    <string name="date_in_route">Date:</string>
    <string name="more_info">More Info</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="back_to_home">Back to Home</string>
    <string name="end_before">End Before</string>
    <string name="start_from">Start From</string>
    <string name="age">Age</string>
    <string name="price">Price</string>
    <string name="all">All</string>
    <string name="DISCARD">Discard</string>
    <string name="reset_selctions">Reset selections ?</string>
    <string name="category_dance">Dancing</string>
    <string name="category_floorball">Floorball</string>
    <string name="category_reading">Reading</string>
    <string name="category_hiking">Hiking</string>
    <string name="category_running">Running</string>
    <string name="category_chess">Chess</string>
    <string name="category_painting">Painting</string>
    <string name="category_golf">Golf</string>
    <string name="category_tennis">Tennis</string>
    <string name="category_skating">Skating</string>
    <string name="category_cycling">Cycling</string>
    <string name="category_fishing">Fishing</string>


    <string name="code_3">00280 Ruskeasuo</string>
    <string name="code_5">00230 Pasila</string>
    <string name="code_7">00240 Pasila</string>
    <string name="code_8">00520 Pasila</string>
    <string name="code_6">00510 Alppila</string>
    <string name="code_1">00550 Vallila</string>
    <string name="code_2">00610 Käpylä</string>
    <string name="code_4">00550 Mäkelänrinne</string>

    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="color_theme">Dark Theme</string>
    <string name="my_event">My Event</string>
    <string name="english_us">English, US</string>
    <string name="innovation_project_for_metropolia_uas">Innovation Project for Metropolia UAS</string>
    <string name="team_idk">Team IDK</string>
    <string name="finnish">Finnish</string>
    <string name="application_language">Application Language</string>
    <string name="our_team">Our Team</string>
    <string name="business_analyst">Business Analyst</string>
    <string name="mobile_developer">Mobile Developer</string>
    <string name="web_developer">Web Developer</string>
    <string name="mission">Mission</string>
    <string name="mission_details">sport app where families can find a different kind of hobbies in the selected area and they have also possible to see all the sports clubs and the fields/halls in that area (provided that there is exist). For example. Family\'s dad wants to know how many basketball clubs are in the Töölö area. At the same time he will see all the basketball fields/halls, camps, and their locations.</string>
    <string name="slogan">Know the activities in your area</string>
    <string name="data_provider">Data Provider</string>
    <string name="policy_info">Application is made for Innovation Project of Metropolia UAS and City of Helsinki provides data services for this product. Please ask the company for specific data usage rights.</string>
    <string name="about_metropolia">About Metropolia UAS</string>
    <string name="about_city_of_helsinki">About City of Helsinki</string>
    <string name="slogan_title">Slogan</string>

</resources>
