<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:scrollingCache="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingTop="@dimen/spacing_xlarge">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_large">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/team_idk"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                    android:textColor="@color/grey_80"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/innovation_project_for_metropolia_uas"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/grey_80" />

            </LinearLayout>

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/logo"
                app:civ_shadow="true"
                app:civ_shadow_radius="0"
                app:civ_border="false" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_large" />

        <LinearLayout
            android:id="@+id/lyt_my_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:minHeight="60dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_large"
            android:paddingRight="@dimen/spacing_large">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/my_event"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey_80" />

            <View
                android:layout_width="@dimen/spacing_large"
                android:layout_height="wrap_content" />

            <ImageButton
                android:layout_width="@dimen/spacing_xmlarge"
                android:layout_height="@dimen/spacing_xmlarge"
                android:background="@android:color/transparent"
                android:tint="@color/grey_60"
                app:srcCompat="@drawable/ic_keyboard_arrow_right" />


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:background="@color/grey_10" />

        <LinearLayout
            android:id="@+id/lyt_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:minHeight="70dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_large"
            android:paddingRight="@dimen/spacing_large">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/color_theme"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey_80" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/darkTheme"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:background="@color/grey_10" />

        <LinearLayout
            android:id="@+id/lyt_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:minHeight="70dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_large"
            android:paddingRight="@dimen/spacing_large">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/about_us"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey_80" />

            <View
                android:layout_width="@dimen/spacing_large"
                android:layout_height="wrap_content" />

            <ImageButton
                android:layout_width="@dimen/spacing_xmlarge"
                android:layout_height="@dimen/spacing_xmlarge"
                android:background="@android:color/transparent"
                android:tint="@color/grey_60"
                app:srcCompat="@drawable/ic_info_outline" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:background="@color/grey_10" />

        <LinearLayout
            android:id="@+id/lyt_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:minHeight="70dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_large"
            android:paddingRight="@dimen/spacing_large">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/privacy_policy"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/grey_80" />

            <View
                android:layout_width="@dimen/spacing_large"
                android:layout_height="wrap_content" />

            <ImageButton
                android:layout_width="@dimen/spacing_xmlarge"
                android:layout_height="@dimen/spacing_xmlarge"
                android:background="@android:color/transparent"
                android:tint="@color/grey_60"
                app:srcCompat="@drawable/ic_account_balance" />
        </LinearLayout>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
