<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_10">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_details"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:foreground="@color/overlay_dark_30"
                android:scaleType="centerCrop"
                android:src="@drawable/image_2"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_middle"
                android:layout_marginRight="@dimen/spacing_middle"
                android:layout_marginTop="-40dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="3dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_middle"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titleStr"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@color/grey_90" />

                    <TextView
                        android:id="@+id/tv_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:text="@string/subTitleStr"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/grey_60" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatRatingBar
                            style="@style/Yellow.Small.AppCompatRatingBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:numStars="5"
                            android:rating="3.5"
                            android:id="@+id/rb_score"
                            android:theme="@style/Yellow.Small.AppCompatRatingBar" />

                        <TextView
                            android:id="@+id/tv_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_medium"
                            android:layout_marginStart="@dimen/spacing_medium"
                            android:text="3.9"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_40" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/tv_day"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_medium"
                            android:layout_marginStart="@dimen/spacing_medium"
                            android:text="2018-11-12"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@color/grey_40" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="0.1" />

                        <TextView
                            android:id="@+id/tv_Time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="7:00 PM"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/light_green_700"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_middle"
                android:layout_marginRight="@dimen/spacing_middle"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="3dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_middle"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Description"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/grey_90" />

                    <TextView
                        android:id="@+id/tv_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:text="@string/app_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/grey_60" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_middle"
                android:layout_marginRight="@dimen/spacing_middle"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="3dp"
                app:cardElevation="2dp">

            </android.support.v7.widget.CardView>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>